--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,7 +1,12 @@
 # Default
+.github/**
+.husky/**
 .vscode/**
 .vscode-test/**
 out/**
+out-integration/**
+evals/**
+e2e/**
 node_modules/**
 src/**
 .gitignore
@@ -13,27 +18,30 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
-package-lock.json
-wranger.toml
 
 # Custom
-demo.gif
 .nvmrc
 .gitattributes
 .prettierignore
+.clinerules*
+.roomodes
+.roo/**
+cline_docs/**
+coverage/**
+locales/**
+benchmark/**
+.direnv/**
 
 # Ignore all webview-ui files except the build directory (https://github.com/microsoft/vscode-webview-ui-toolkit-samples/blob/main/frameworks/hello-world-react-cra/.vscodeignore)
 webview-ui/src/**
 webview-ui/public/**
+webview-ui/scripts/**
 webview-ui/index.html
 webview-ui/README.md
 webview-ui/package.json
 webview-ui/package-lock.json
 webview-ui/node_modules/**
 **/.gitignore
-
-# Ignore docs
-docs/**
 
 # Fix issue where codicons don't get packaged (https://github.com/microsoft/vscode-extension-samples/issues/692)
 !node_modules/@vscode/codicons/dist/codicon.css
@@ -42,5 +50,14 @@ docs/**
 # Include default themes JSON files used in getTheme
 !src/integrations/theme/default-themes/**
 
-# Include icons
+# Ignore doc assets
+assets/docs/**
+# Include icons and images
 !assets/icons/**
+!assets/images/**
+
+# Include .env file for telemetry
+!.env
+
+# Wranger.toml
+wranger.toml
